// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
[
  [
    "main.js",
    1843,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 1843,
    },
  ],
  [
    "main.js.gz",
    585,
    {
      "compressed": true,
      "size": 585,
    },
  ],
  [
    "newFile.js",
    23,
    {
      "related": {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  [
    "newFile.js.gz",
    43,
    {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16131,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16131,
    },
  ],
  [
    "main.js.gz",
    4001,
    {
      "compressed": true,
      "size": 4001,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
[
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16131,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16131,
    },
  ],
  [
    "main.js.gz",
    4001,
    {
      "compressed": true,
      "size": 4001,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.cd3aed5809a2faa4eb5a.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.cd3aed5809a2faa4eb5a.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.68e61e02648eb0a96ddb.js",
    16218,
    {
      "contenthash": "68e61e02648eb0a96ddb",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.68e61e02648eb0a96ddb.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.68e61e02648eb0a96ddb.js.gz",
    4085,
    {
      "compressed": true,
      "immutable": true,
      "size": 4085,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16187,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16187,
    },
  ],
  [
    "main.js.gz",
    4067,
    {
      "compressed": true,
      "size": 4067,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `[]`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    78117,
    {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16115,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16115,
    },
  ],
  [
    "main.js.gz",
    3998,
    {
      "compressed": true,
      "size": 3998,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
[
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "icon.png",
    94117,
    {
      "related": {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "icon.png.gz",
    73650,
    {
      "compressed": true,
      "size": 73650,
    },
  ],
  [
    "icon.svg",
    672,
    {
      "related": {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "icon.svg.gz",
    390,
    {
      "compressed": true,
      "size": 390,
    },
  ],
  [
    "main.js",
    16115,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16115,
    },
  ],
  [
    "main.js.gz",
    3998,
    {
      "compressed": true,
      "size": 3998,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16171,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16171,
    },
  ],
  [
    "main.js.gz",
    4063,
    {
      "compressed": true,
      "size": 4063,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16208,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16208,
    },
  ],
  [
    "main.js.gz",
    4085,
    {
      "compressed": true,
      "size": 4085,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16171,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16171,
    },
  ],
  [
    "main.js.br",
    3545,
    {
      "compressed": true,
      "size": 3545,
    },
  ],
  [
    "main.js.custom",
    16171,
    {
      "compressed": true,
      "size": 16171,
    },
  ],
  [
    "main.js.gz",
    4063,
    {
      "compressed": true,
      "size": 4063,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.js.br",
        "customed": "async.js.custom",
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.br",
    123,
    {
      "compressed": true,
      "size": 123,
    },
  ],
  [
    "async.js.custom",
    194,
    {
      "compressed": true,
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16171,
    {
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 16171,
    },
  ],
  [
    "main.js.br",
    3545,
    {
      "compressed": true,
      "size": 3545,
    },
  ],
  [
    "main.js.custom",
    16171,
    {
      "compressed": true,
      "size": 16171,
    },
  ],
  [
    "main.js.gz",
    4063,
    {
      "compressed": true,
      "size": 4063,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16171,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16171,
    },
  ],
  [
    "main.js.gz",
    4063,
    {
      "compressed": true,
      "size": 4063,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.js",
    194,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.js.gz",
    136,
    {
      "compressed": true,
      "size": 136,
    },
  ],
  [
    "main.js",
    16171,
    {
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16171,
    },
  ],
  [
    "main.js.gz",
    4063,
    {
      "compressed": true,
      "size": 4063,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `[]`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `[]`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4086,
    {
      "compressed": true,
      "immutable": true,
      "size": 4086,
    },
  ],
  [
    "main.js?var=87e4bf99b728fffc08a0",
    16219,
    {
      "contenthash": "87e4bf99b728fffc08a0",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16219,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `[]`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js",
    194,
    {
      "chunkhash": "55e6e9a872bcc7d4b226",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.55e6e9a872bcc7d4b226.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "async.async.55e6e9a872bcc7d4b226.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js",
    16218,
    {
      "chunkhash": "3d33e8cae1a5b505b55e",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.3d33e8cae1a5b505b55e.js.gz",
      },
      "size": 16218,
    },
  ],
  [
    "main.3d33e8cae1a5b505b55e.js.gz",
    4087,
    {
      "compressed": true,
      "immutable": true,
      "size": 4087,
    },
  ],
  [
    "stats.json",
    155,
    {
      "size": 155,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `[]`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=ff0ad4032ae148f14da4",
    194,
    {
      "contenthash": "ff0ad4032ae148f14da4",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "copied.js",
    400,
    {
      "copied": true,
      "related": {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  [
    "copied.js.gz",
    29,
    {
      "compressed": true,
      "size": 29,
    },
  ],
  [
    "main.js.gz",
    4139,
    {
      "compressed": true,
      "immutable": true,
      "size": 4139,
    },
  ],
  [
    "main.js.map.gz",
    4211,
    {
      "compressed": true,
      "size": 4211,
    },
  ],
  [
    "main.js.map?var=73bfdc1831ffc69a2d3f",
    13225,
    {
      "development": true,
      "related": {
        "gzipped": "main.js.map.gz",
      },
      "size": 13225,
    },
  ],
  [
    "main.js?var=73bfdc1831ffc69a2d3f",
    16280,
    {
      "contenthash": "73bfdc1831ffc69a2d3f",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=73bfdc1831ffc69a2d3f",
      },
      "size": 16280,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `[]`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "related": {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.br",
    123,
    {
      "compressed": true,
      "immutable": true,
      "size": 123,
    },
  ],
  [
    "async.async.js.compress",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.custom?foo=bar#hash",
    194,
    {
      "compressed": true,
      "immutable": true,
      "size": 194,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "async.async.js.br",
        "compressed": "async.async.js.compress",
        "customed": "async.async.js.custom?foo=bar#hash",
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.br",
    3581,
    {
      "compressed": true,
      "immutable": true,
      "size": 3581,
    },
  ],
  [
    "main.js.compress",
    16222,
    {
      "compressed": true,
      "immutable": true,
      "size": 16222,
    },
  ],
  [
    "main.js.custom?foo=bar#hash",
    16222,
    {
      "compressed": true,
      "immutable": true,
      "size": 16222,
    },
  ],
  [
    "main.js.gz",
    4090,
    {
      "compressed": true,
      "immutable": true,
      "size": 4090,
    },
  ],
  [
    "main.js?var=6d8b5bc920f6f6bff225",
    16222,
    {
      "contenthash": "6d8b5bc920f6f6bff225",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 16222,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `[]`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `[]`;

exports[`CompressionPlugin should work: assets 1`] = `
[
  [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    {
      "immutable": true,
      "related": {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    390,
    {
      "compressed": true,
      "immutable": true,
      "size": 390,
    },
  ],
  [
    "async.async.js.gz",
    136,
    {
      "compressed": true,
      "immutable": true,
      "size": 136,
    },
  ],
  [
    "async.async.js?ver=cd3aed5809a2faa4eb5a",
    194,
    {
      "contenthash": "cd3aed5809a2faa4eb5a",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "async.async.js.gz",
      },
      "size": 194,
    },
  ],
  [
    "main.js.gz",
    4090,
    {
      "compressed": true,
      "immutable": true,
      "size": 4090,
    },
  ],
  [
    "main.js?var=6d8b5bc920f6f6bff225",
    16222,
    {
      "contenthash": "6d8b5bc920f6f6bff225",
      "immutable": true,
      "javascriptModule": false,
      "related": {
        "gzipped": "main.js.gz",
      },
      "size": 16222,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `[]`;

exports[`CompressionPlugin should work: warnings 1`] = `[]`;
